force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Partner Discount</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Parnter Discount ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>