force-app/main/default/objects/Commission__c/fields/Commission_Category__c.field-meta.xml
<CustomField>
    <fullName>Commission_Category__c</fullName>
    <label>Partner Discount Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Commission_Category</valueSetName>
    </valueSet>
</CustomField>