force-app/main/default/objects/Commission__c/fields/Commission_Note__c.field-meta.xml
<CustomField>
    <fullName>Commission_Note__c</fullName>
    <label>Partner Discount Note</label>
    <type>TextArea</type>
</CustomField>