force-app/main/default/objects/Commission__c/fields/Course_Category__c.field-meta.xml
<CustomField>
    <fullName>Course_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Category</label>
    <referenceTo>Course_Categorty__c</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>