force-app/main/default/objects/Commission__c/fields/HE_EU_Currency__c.field-meta.xml
<CustomField>
    <fullName>HE_EU_Currency__c</fullName>
    <label>HE EU Fixed Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>