force-app/main/default/objects/Commission__c/fields/HE_EU_Percent__c.field-meta.xml
<CustomField>
    <fullName>HE_EU_Percent__c</fullName>
    <label>HE EU %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>