force-app/main/default/objects/Commission__c/fields/New_Fixed_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Fixed_Commission_Value__c</fullName>
    <label>New Fixed Partner Discount Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>