force-app/main/default/objects/Commission__c/fields/New_Percentage_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Percentage_Commission_Value__c</fullName>
    <label>New Percentage / Offshore EU</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>