force-app/main/default/objects/Commission__c/fields/Renewal_Percentage_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Percentage_Commission_Value__c</fullName>
    <label>Renewal Percentage  / Onshore EU</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>