force-app/main/default/objects/Commission__c/validationRules/If_Fixed_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Fixed_Value</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Commission_Type__c, &quot;Fixed&quot;)
				&amp;&amp;
 ISNULL(New_Fixed_Commission_Value__c )</errorConditionFormula>
    <errorMessage>Please Fill Commission Value</errorMessage>
</ValidationRule>