force-app/main/default/objects/Commission__c/validationRules/If_fixed_value_2.validationRule-meta.xml
<ValidationRule>
    <fullName>If_fixed_value_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Commission_Type__c, &quot;Fixed&quot;) 
&amp;&amp; 
ISNULL(Renewal_Fixed_Commission_Value__c)</errorConditionFormula>
    <errorMessage>Please Fill Commission Value</errorMessage>
</ValidationRule>