force-app/main/default/objects/Commission__c/validationRules/If_Percentage_2.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Percentage_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Commission_Type__c, &quot;Percentage&quot;)
				&amp;&amp;
ISNULL(New_Percentage_Commission_Value__c )</errorConditionFormula>
    <errorMessage>Please Fill Percentage Value</errorMessage>
</ValidationRule>